feat: :sparkles: add http

--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "universe-mp",
   "version": "0.0.0",
-  "packageManager": "pnpm@7.19.0",
+  "packageManager": "pnpm@7.20.0",
   "description": "🚀 A modern, high-performance universe-mp project designed with uniapp!",
   "keywords": [
     "Vue3",
@@ -57,6 +57,7 @@
     "build:quickapp-webview-union": "uni build -p quickapp-webview-union",
     "preinstall": "node ./scripts/preinstall.mjs",
     "postinstall": "simple-git-hooks",
+    "api-types": "tsx ./scripts/create-api-types.ts",
     "dev": "uni -p mp-lark",
     "build": "uni build -p mp-lark",
     "test": "vitest",
@@ -81,9 +82,13 @@
     "@dcloudio/uni-mp-toutiao": "3.0.0-alpha-3061020221121002",
     "@dcloudio/uni-mp-weixin": "3.0.0-alpha-3061020221121002",
     "@dcloudio/uni-quickapp-webview": "3.0.0-alpha-3061020221121002",
+    "axios": "^0.24.0",
+    "crypto-js": "^4.1.1",
+    "jsencrypt": "^3.2.1",
+    "lodash-es": "^4.17.21",
     "nprogress": "^0.2.0",
     "pinia": "^2.0.28",
-    "qs": "^6.11.0",
+    "qs": "^5.2.1",
     "vue": "^3.2.45"
   },
   "devDependencies": {
@@ -94,7 +99,9 @@
     "@dcloudio/uni-cli-shared": "3.0.0-alpha-3061020221121002",
     "@dcloudio/uni-stacktracey": "3.0.0-alpha-3061020221121002",
     "@dcloudio/vite-plugin-uni": "3.0.0-alpha-3061020221121002",
+    "@types/crypto-js": "^4.1.1",
     "@types/jsdom": "^20.0.1",
+    "@types/lodash-es": "^4.17.5",
     "@types/node": "*",
     "@types/nprogress": "^0.2.0",
     "@types/qs": "^6.9.7",
@@ -116,11 +123,13 @@
     "jsonc-eslint-parser": "^2.1.0",
     "lint-staged": "^13.0.3",
     "npm-run-all": "^4.1.5",
+    "openapi-typescript": "^5.4.0",
     "postcss": "^8.4.18",
     "postcss-html": "^1.5.0",
     "postcss-scss": "^4.0.6",
     "prettier": "^2.7.1",
     "rimraf": "^3.0.2",
+    "rollup": "^2.79.1",
     "sass": "^1.57.1",
     "simple-git-hooks": "^2.8.1",
     "stylelint": "^14.14.1",
