--- a/src/manifest.json
+++ b/src/manifest.json
@@ -1,6 +1,6 @@
 {
-    "name" : "",
-    "appid" : "",
+    "name" : "universe-mp",
+    "appid" : "__UNI__84F611E",
     "description" : "",
     "versionName" : "1.0.0",
     "versionCode" : "100",
@@ -65,8 +65,14 @@
     "mp-toutiao" : {
         "usingComponents" : true
     },
-    "uniStatistics": {  
-        "enable": false
+	"mp-lark" : {
+	    "setting" : {
+	        "urlCheck" : false
+	    },
+	    "usingComponents" : true
+	},
+    "uniStatistics" : {
+        "enable" : false
     },
     "vueVersion" : "3"
 }
