--- a/tsconfig.vite.json
+++ b/tsconfig.vite.json
@@ -6,5 +6,5 @@
     "types": ["node", "vitest"],
     "composite": true
   },
-  "include": ["**/vite.config.*", "package.json", "typings/**/*"]
+  "include": ["**/vite.config.*", "package.json", "typings/**/*", "build/**/*"]
 }
