--- a/.env.development
+++ b/.env.development
@@ -7,11 +7,7 @@ VITE_PUBLIC_PATH = /
 
 # Cross-domain proxy, you can configure multiple
 # Please note that no line breaks
-# VITE_PROXY = [["/basic-api","http://localhost:3000"],["/upload","http://localhost:3300/upload"]]
-# dev
-# VITE_PROXY = [["/TIANTA-WORKFLOW","http://192.168.10.48:8080/TIANTA-WORKFLOW"],["/TIANTA-SYSTEM","http://192.168.10.48:8080/TIANTA-SYSTEM"], ["/TIANTA-FILE","http://192.168.10.48:8080/TIANTA-FILE"], ["/TIANTA-MESSAGE","http://192.168.10.48:8080/TIANTA-MESSAGE"], ["/STARLIGHT-POE-WEB","http://192.168.10.48:8080/STARLIGHT-POE-WEB"], ["/STARLIGHT-CENTRE-WEB","http://192.168.10.48:8080/STARLIGHT-CENTRE-WEB"], ["/STARLIGHT-PORTAL-WEB","http://192.168.10.48:8080/STARLIGHT-PORTAL-WEB"], ["/STARLIGHT-INVEST-WEB","http://192.168.10.48:8080/STARLIGHT-INVEST-WEB"]]
-# test
-VITE_PROXY = [["/TIANTA-WORKFLOW","http://192.168.10.29:8080/TIANTA-WORKFLOW"], ["/TIANTA-SYSTEM","http://192.168.10.29:8080/TIANTA-SYSTEM"], ["/TIANTA-FILE","http://192.168.10.29:8080/TIANTA-FILE"], ["/TIANTA-MESSAGE","http://192.168.10.29:8080/TIANTA-MESSAGE"], ["/STARLIGHT-POE-WEB","http://192.168.10.29:8080/STARLIGHT-POE-WEB"], ["/STARLIGHT-CENTRE-WEB","http://192.168.10.29:8080/STARLIGHT-CENTRE-WEB"], ["/STARLIGHT-PORTAL-WEB","http://192.168.10.29:8080/STARLIGHT-PORTAL-WEB"], ["/STARLIGHT-INVEST-WEB","http://192.168.10.29:8080/STARLIGHT-INVEST-WEB"]]
+VITE_PROXY = [["/basic-api","http://localhost:3000"],["/upload","http://localhost:3300/upload"]]
 
 # Delete console
 VITE_DROP_CONSOLE = false
@@ -20,8 +16,11 @@ VITE_DROP_CONSOLE = false
 #VITE_GLOB_API_URL=/api
 
 # File upload address， optional
-VITE_GLOB_UPLOAD_URL=/upload
+VITE_GLOB_UPLOAD_URL = /upload
 
 # Interface prefix
-VITE_GLOB_API_URL_PREFIX=
+# # dev
+# VITE_GLOB_API_URL_PREFIX = "http://192.168.10.48:8080"
+# test
+VITE_GLOB_API_URL_PREFIX = "http://192.168.10.29:8080"
 
