--- a/.env.test
+++ b/.env.test
@@ -17,17 +17,17 @@ VITE_BUILD_COMPRESS = 'none'
 VITE_BUILD_COMPRESS_DELETE_ORIGIN_FILE = false
 
 # Basic interface address SPA
-VITE_GLOB_API_URL=/api
+VITE_GLOB_API_URL = /api
 
 # File upload address， optional
 # It can be forwarded by nginx or write the actual address directly
-VITE_GLOB_UPLOAD_URL=/upload
+VITE_GLOB_UPLOAD_URL = /upload
 
 # Interface prefix
-VITE_GLOB_API_URL_PREFIX=
+VITE_GLOB_API_URL_PREFIX = "http://192.168.10.29:8080"
 
 # Whether to enable image compression
-VITE_USE_IMAGEMIN= true
+VITE_USE_IMAGEMIN = true
 
 # Is it compatible with older browsers
 VITE_LEGACY = true
