feat: :sparkles: add router interceptor and subpackages

--- a/.env.development
+++ b/.env.development
@@ -19,8 +19,8 @@ VITE_DROP_CONSOLE = false
 VITE_GLOB_UPLOAD_URL = /upload
 
 # Interface prefix
-# # dev
-# VITE_GLOB_API_URL_PREFIX = "http://192.168.10.48:8080"
-# test
-VITE_GLOB_API_URL_PREFIX = "http://192.168.10.29:8080"
+# dev
+VITE_GLOB_API_URL_PREFIX = "http://192.168.10.48:8080"
+# # test
+# VITE_GLOB_API_URL_PREFIX = "http://192.168.10.29:8080"
 
